# Userbot_Scrapping

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  test.py
app/: get_all_clients_proxy.py  mailing.py  main.py  scrapping.py
app/database/: create_tables.py  functions.py  pool.py
app/logger/: __init__.py  loguru_logger.py
our_message/: message_text.txt
sessions/: create_sessions.py  proxies_datas.txt  sessions_datas.txt
